added models and design improvements